Sutter Health/src/objects/Potential_Quality_Issue__c.object
<CustomObject>
    <description>Req-3369</description>
    <fields>
        <fullName>Access_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access / Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admit_within_3_days_of_ER__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admit within 3 days of ER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Treatment_Diagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment/Treatment/Diagnosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Medical_Director__c</fullName>
        <label>Assigned Medical Director</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jennifer Nuovo, MD</fullName>
                </value>
                <value>
                    <fullName>Malika Stoll, MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_RN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned RN</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Potential_Quality_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ByPass_CMO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Bypasses CMO Approval</description>
        <label>Bypass CMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment_CMO__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_PRC__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_UM__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communications_Conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communications / Conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continuity_of_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continuity of Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Inquiry_Type__c</fullName>
        <label>Customer Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Quality Issue (PQI)</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Occurrence__c</fullName>
        <label>Date of Occurrence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delay_Care_or_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delay (Care or Referral)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_of_Events1__c</fullName>
        <label>Description of Events</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Facility_Office_BH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility / Office - BH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Office_Environment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility / Office Environment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Director_Recommendations_Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Director_Recommendations__c</fullName>
        <label>Medical Director Recommendations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close – No issues identified</fullName>
                </value>
                <value>
                    <fullName>Close – Track and Trend</fullName>
                </value>
                <value>
                    <fullName>Credentialing Review Requested</fullName>
                </value>
                <value>
                    <fullName>Education Letter</fullName>
                </value>
                <value>
                    <fullName>Peer Review Requested</fullName>
                </value>
                <value>
                    <fullName>Reff to Foundation&apos;s Quality Committee</fullName>
                </value>
                <value>
                    <fullName>Site Visit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Director_Review_Summary1__c</fullName>
        <label>Medical Director Review Summary</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Member_Age__c</fullName>
        <formula>TEXT(YEAR(TODAY() ) - YEAR(Member_DOB__c))</formula>
        <label>Member Age:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_DOB__c</fullName>
        <label>Member DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Potential Quality Issue (Member ID)</relationshipLabel>
        <relationshipName>Potential_Quality_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Medical_Group_Affiliation__c</fullName>
        <label>Member Medical Group Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <label>Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Never_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Never Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_CheckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overutilization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overutilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCP_Practioner_Name__c</fullName>
        <label>PCP Practioner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQI_Referral_Date__c</fullName>
        <label>PQI Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PQI_Referred_By__c</fullName>
        <label>PQI Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQI_Required_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PQI Required Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PQI_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>UM Review</fullName>
                </value>
                <value>
                    <fullName>MD Review</fullName>
                </value>
                <value>
                    <fullName>PRC Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>UM Rejected</fullName>
                </value>
                <value>
                    <fullName>MD Approved</fullName>
                </value>
                <value>
                    <fullName>MD Rejected</fullName>
                </value>
                <value>
                    <fullName>PRC Approved</fullName>
                </value>
                <value>
                    <fullName>PRC</fullName>
                </value>
                <value>
                    <fullName>UM Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PQI_indicator_Other__c</fullName>
        <label>Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Credentialing_Outcome__c</fullName>
        <label>Peer  Review / Credentialing Outcome</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>805</fullName>
                </value>
                <value>
                    <fullName>Close – No Issues Identified</fullName>
                </value>
                <value>
                    <fullName>Close – Track and Trend</fullName>
                </value>
                <value>
                    <fullName>Credentialing Review Requested</fullName>
                </value>
                <value>
                    <fullName>Education Letter</fullName>
                </value>
                <value>
                    <fullName>Medical Board Referral</fullName>
                </value>
                <value>
                    <fullName>Peer Review Requested</fullName>
                </value>
                <value>
                    <fullName>Reff to Foundation&apos;s Quality Committee</fullName>
                </value>
                <value>
                    <fullName>Site Visit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peer_Review_Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharmacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_of_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality of Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RN_Case_Review_Summary1__c</fullName>
        <label>RN Clinical Summary</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RN_Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RN_Justification_of_Recommendation__c</fullName>
        <label>Justification of Recommendation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RN_Leveling__c</fullName>
        <label>Leveling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L0-No quality of care issue</fullName>
                </value>
                <value>
                    <fullName>L0-Emotional concern</fullName>
                </value>
                <value>
                    <fullName>L0-Administrative problem such as referral auth and wait time for non-urgent care.</fullName>
                </value>
                <value>
                    <fullName>L0-Member centered/interpersonal undetermined issue</fullName>
                </value>
                <value>
                    <fullName>L0-Upset, frightened member</fullName>
                </value>
                <value>
                    <fullName>L0-Issue cannot be determined from available records</fullName>
                </value>
                <value>
                    <fullName>L1-Interpersonal provider issue</fullName>
                </value>
                <value>
                    <fullName>L1-Known complication (scar, rash, etc.), surgical or medical, not due to negligence or technique</fullName>
                </value>
                <value>
                    <fullName>L1-Near miss-error or mistake caught before there was a significant problem</fullName>
                </value>
                <value>
                    <fullName>L1-Lack of medical records documentation, omission, or non-compliance</fullName>
                </value>
                <value>
                    <fullName>L1-Lack of timely discharge planning</fullName>
                </value>
                <value>
                    <fullName>L2-Temporary injury or outcome</fullName>
                </value>
                <value>
                    <fullName>L2-Treatment resulted in recovery</fullName>
                </value>
                <value>
                    <fullName>L2-Complications that result in a long tereatment regimen, but no residual injury</fullName>
                </value>
                <value>
                    <fullName>L2-Patient suicide attempt or serious injury to self while in treatment</fullName>
                </value>
                <value>
                    <fullName>L2-Lack of timely intervention</fullName>
                </value>
                <value>
                    <fullName>L2-Violation of patient confidentiality or ethics violation</fullName>
                </value>
                <value>
                    <fullName>L3-Mild/Moderate permanent injury or outcome</fullName>
                </value>
                <value>
                    <fullName>L3-Permanent injury, which has long-term effects on activities of daily living</fullName>
                </value>
                <value>
                    <fullName>L3-Communication issue that has an adverse outcome</fullName>
                </value>
                <value>
                    <fullName>L3-Clinical judgment impacting member&apos;s care with mild to moderate adverse</fullName>
                </value>
                <value>
                    <fullName>L4-Major permament injury/grave permanent injury</fullName>
                </value>
                <value>
                    <fullName>L4-Injury is severe or is an amplification of a significant permanent injury</fullName>
                </value>
                <value>
                    <fullName>L4-Most serious injury where all aspects of life are significantly compromised</fullName>
                </value>
                <value>
                    <fullName>L4-Death</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RN_Pertinent_criteria_guidelines_standa__c</fullName>
        <label>Pertinent criteria/guidelines/standards</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RN_Recommendations__c</fullName>
        <label>RN Recommendations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close – No Issues Identified</fullName>
                </value>
                <value>
                    <fullName>Close – Track and Trend</fullName>
                </value>
                <value>
                    <fullName>Close –Unfounded, unable to substantiate</fullName>
                </value>
                <value>
                    <fullName>Significant Deficiencies Noted</fullName>
                </value>
                <value>
                    <fullName>Minor Deficiencies Noted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RN_Reviewer_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RN Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Potential_Quality_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RN_Severity_Level__c</fullName>
        <inlineHelpText>Level O or Level S : Does not require review by a physician prior to being placed on the compendium</inlineHelpText>
        <label>Severity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 0: No quality of care issue identified after investigation. Care appears to be appropriate and has not been compromised.</fullName>
                </value>
                <value>
                    <fullName>Level S: A quality of communication or art of caring issue has been identified which did not result in any harm to the member</fullName>
                </value>
                <value>
                    <fullName>Level 1: A confirmed quality problem with minimal potential for significant adverse effect on the member</fullName>
                </value>
                <value>
                    <fullName>Level 2: A confirmed quality problem with moderate harm or potential for moderate level of harm to the member</fullName>
                </value>
                <value>
                    <fullName>Level 3: A confirmed substantial quality of care problem or gross and flagrant violation of obligation, which had a direct effect on health and welfare of the member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RN_Timeline_of_Key_Events__c</fullName>
        <label>Timeline of Key Events</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Readmission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Readmission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Referral__c</fullName>
        <label>Reason for Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Provider_applicable__c</fullName>
        <label>Related Provider (If applicable)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_PQI_Indicators__c</fullName>
        <description>To store the Labels of The PQI Indicators Selected</description>
        <label>Selected PQI Indicators</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sentinel_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sentinel Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setting_other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settings__c</fullName>
        <label>Settings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inpatient</fullName>
                </value>
                <value>
                    <fullName>Outpatient</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <inlineHelpText>Level O or Level S : Does not require review by a physician prior to being placed on the compendium</inlineHelpText>
        <label>Severity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 0: No quality of care issue identified after investigation. Care appears to be appropriate and has not been compromised.</fullName>
                </value>
                <value>
                    <fullName>Level S: A quality of communication or art of caring issue has been identified which did not result in any harm to the member</fullName>
                </value>
                <value>
                    <fullName>Level 1: A confirmed quality problem with minimal potential for significant adverse effect on the member</fullName>
                </value>
                <value>
                    <fullName>Level 2: A confirmed quality problem with moderate harm or potential for moderate level of harm to the member</fullName>
                </value>
                <value>
                    <fullName>Level 3: A confirmed substantial quality of care problem or gross and flagrant violation of obligation, which had a direct effect on health and welfare of the member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surgical_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surgical Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Competence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Competence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Referrals_or_Auths__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UM Referrals or Auths</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Underutilization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Underutilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unexpected_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unexpected Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>owner__c</fullName>
        <formula>IF( BEGINS(OwnerId , &apos;00G&apos;), Owner:Queue.QueueName ,Owner:User.FirstName + &apos; &apos; + Owner:User.LastName  )</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <label>Potential Quality Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ByPass_CMO__c</columns>
        <columns>PQI_Status__c</columns>
        <columns>Member_Age__c</columns>
        <columns>Member_DOB__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Member_Medical_Group_Affiliation__c</columns>
        <columns>Member_ID__c</columns>
        <columns>owner__c</columns>
        <columns>Assigned_RN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CMO_Potential_Quality_Issue</fullName>
        <columns>NAME</columns>
        <columns>ByPass_CMO__c</columns>
        <columns>PQI_Status__c</columns>
        <columns>Member_Age__c</columns>
        <columns>Member_DOB__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Member_Medical_Group_Affiliation__c</columns>
        <columns>Member_ID__c</columns>
        <columns>owner__c</columns>
        <columns>Assigned_RN__c</columns>
        <filterScope>Queue</filterScope>
        <label>CMO</label>
        <queue>CMO</queue>
        <sharedTo>
            <group>CMO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_PQI</fullName>
        <columns>NAME</columns>
        <columns>ByPass_CMO__c</columns>
        <columns>PQI_Status__c</columns>
        <columns>Member_Age__c</columns>
        <columns>Member_DOB__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Member_Medical_Group_Affiliation__c</columns>
        <columns>Member_ID__c</columns>
        <columns>owner__c</columns>
        <columns>Assigned_RN__c</columns>
        <filterScope>Mine</filterScope>
        <label>My PQI</label>
    </listViews>
    <listViews>
        <fullName>Quality_Potential_Quality_Issue</fullName>
        <columns>NAME</columns>
        <columns>ByPass_CMO__c</columns>
        <columns>PQI_Status__c</columns>
        <columns>Member_Age__c</columns>
        <columns>Member_DOB__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Member_Medical_Group_Affiliation__c</columns>
        <columns>Member_ID__c</columns>
        <columns>owner__c</columns>
        <columns>Assigned_RN__c</columns>
        <filterScope>Queue</filterScope>
        <label>Quality</label>
        <queue>Quality</queue>
        <sharedTo>
            <group>Quality_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UM_Reviewers_Potential_Quality_Issue</fullName>
        <columns>NAME</columns>
        <columns>ByPass_CMO__c</columns>
        <columns>PQI_Status__c</columns>
        <columns>Member_Age__c</columns>
        <columns>Member_DOB__c</columns>
        <columns>Member_Name__c</columns>
        <columns>Member_Medical_Group_Affiliation__c</columns>
        <columns>Member_ID__c</columns>
        <columns>owner__c</columns>
        <columns>Assigned_RN__c</columns>
        <filterScope>Queue</filterScope>
        <label>UM Reviewers</label>
        <queue>UM_Reviewers</queue>
        <sharedTo>
            <group>UM_Reviewers_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PQI-{0000000000}</displayFormat>
        <label>PQI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Quality Issue</pluralLabel>
    <recordTypes>
        <fullName>Potential_Quality_Issue</fullName>
        <active>true</active>
        <label>Potential Quality Issue (PQI)</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>